# ddd

./: .gitignore  .gitlab-ci.yml  .gitmodules  Gruntfile.js  README.md  boardmetrics.py  package-lock.json  package.json  pyproject.toml  setup.cfg  snowpack.config.js  trainblockers.py  tsconfig.json
ddd/: boardmetrics.py  data.py  ddd.py  mw.py  phab.py  phobjects.py  trainblockers.py
docs/: DefiningDashboards.md  PropertyMatcher.md  TrainBlockers.md
etc/systemd/: ddd-datasette.service  ddd-datasette.sh  ddd-watcher.path  ddd-watcher.service
scripts/: stage  watch-src
src/ddd/: __init__.py  boardmetrics.py  boardmetrics_mapper.py  boardmetrics_schema.py  data.py  main.py  mw.py  phab.py  phobjects.py  train_mapper.py  trainblockers.py
test/: phabricator_transactions.json  test_phobjects.py  train.transactions.json
typings/datasette/: __init__.pyi  actor_auth_cookie.pyi  app.pyi  blob_renderer.pyi  cli.pyi  database.pyi  default_magic_parameters.pyi  default_menu_links.pyi  default_permissions.pyi  facets.pyi  filters.pyi  hookspecs.pyi  inspect.pyi  plugins.pyi  renderer.pyi  sql_functions.pyi  tracer.pyi  url_builder.pyi  version.pyi
typings/datasette/utils/: __init__.pyi  asgi.pyi  internal_db.pyi  shutil_backport.pyi  sqlite.pyi  testing.pyi
typings/datasette/views/: base.pyi  database.pyi  index.pyi  special.pyi  table.pyi
typings/sqlite_utils/: __init__.pyi  cli.pyi  db.pyi  recipes.pyi  utils.pyi
www/: metadata.yaml  settings.json  settings_staging.json
www/plugins/: ddd_datasette.py  phabricator_datasette_plugin.py
www/sql/metrics/: all_events.bak.sql  all_events.sql  burnup.sql  coincident-projects.sql  column_events.sql  column_metrics_monthly.sql  most_active_projects.sql  status_changes.sql  task_column_intersection.sql  time_in_columns.sql  workboard_progression.sql
www/static/: CategoricalBubbleController.d.ts  DashboardApp.d.ts  DashboardApp.js  DashboardApp.js.map  DashboardApp.ts  TonicIcon.d.ts  TonicIcon.js  app.js  autocomplete-js.d.ts  autocomplete.d.ts  autocomplete.js  autocomplete.js.map  autocomplete.min.js  autocomplete.ts  browserifyload.js  datasource.d.ts  datasource.js  datasource.js.map  datasource.ts  dom.d.ts  dom.js  dom.js.map  dom.ts  filter-input.d.ts  filter-input.js  filter-input.js.map  filter-input.ts  filter.js  global.d.ts  index.d.ts  index.js  index.js.map  index.ts  input.d.ts  jsoneditor.css  styles.css  test.html  tonic-chart.d.ts  tonic-chart.js  tonic-chart.js.map  (+10 more)
www/static/js/: CategoricalBubbleController.js  DashboardApp.js  DashboardApp.js.map  app.js  app.js.map  autocomplete.js.map  bundle.js  dashboard.js  datasource.js  datasource.js.map  dom.js  dom.js.map  filter-input.js  filter-input.js.map  index.js  index.js.map  ui.js  ui.js.map  vega-tonic.js  vega-tonic.js.map
www/static/types/: DashboardApp.d.ts  DashboardApp.d.ts.map  autocomplete.d.ts  autocomplete.d.ts.map  dashboard.d.ts  datasource.d.ts  datasource.d.ts.map  dom.d.ts  dom.d.ts.map  filter-input.d.ts  index.d.ts  (+7 more)
www/templates/: _table.html  base.html  filter_projects.html  project_columns.html  query.html  subprojects.html  task_days_in_project.html  task_details.html  task_metrics.html  task_projects.html  task_users.html  view.html
(+27 files in other folders)
