[tool.poetry]
name = 'ddd'
version = '0.1.0'
authors = ["Mukunda Modell <mmodell@wikimedia.org>"]
description = "ddd or d³ is a toolkit for accessing APIs and processing data from disperate systems."
readme = "README.md"

packages = [
    { include = "ddd", from="src" },
]

[tool.poetry.dependencies]
python = '>=3.7.3, ~=3.10.1'
typer = {extras = ["all"], version = "^0.3.2"}
#datasette = { path = "src/datasette", develop = true }
#datasette-dashboards = { path = "src/datasette-dashboards", develop = true }
datasette = "^0.59"
datasette-render-markdown = "^2.0"
#note: it seems that datasette-markdown dependencies are broken because things break
#unless we force a newer version of importlib-metadata
importlib-metadata = ">3.10"
Markdown = "^3.3.6"
datasette-block-robots = "^1.0"
click = "<7.2"
semver = "^2.13.0"
requests = "^2.26.0"
sqlite-utils = "^3.17"
rich = "^10.11.0"
regex = "2021.10.8"
pandas = "^1.3.4"
numpy = "^1.21.4"
datasette-hovercards = "^0.1a0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"

[tool.poetry.scripts]
boardmetrics = "ddd.boardmetrics:main"
trainblockers = "ddd.trainblockers:main"
conduit = "ddd.conduit_cli:cli"
dddcli = "ddd.main:cli"

[build-system]
requires = ["poetry>=1.1.8"]
build-backend = "poetry.masonry.api"

[project.scripts]
boardmetrics = "ddd.boardmetrics:main"
trainblockers = "ddd.trainblockers:main"
conduit = "ddd.conduit_cli:cli"
dddcli = "ddd.main:cli"

[tool.pyright]
reportMissingTypeStubs = true

[tool.mypy]
implicit_reexport = true
