[metadata]
name = ddd
version = 0.0.1

[options]
packages = find:
package_dir =
    =src
install_requires =
    requests
    click
    rich
    typer
    semver < 3.0
    sqlite_utils
    datasette

tests_require =
    requests
    sqlite_utils
    datasette

[options.packages.find]
where = src
include = ddd*

[options.entry_points]
console_scripts =
    boardmetrics = ddd.boardmetrics:main
    trainblockers = ddd.trainblockers:main
    conduit = ddd.conduit_cli:cli
    dddcli = ddd.main:cli
